--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Repositório dedicado ao conhecimento relacionado à Informática para a Biodiversidade.
   
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://biodivinfo.github.com" # the base hostname & protocol for your site
+url: "http://biodivinfo.github.io" # the base hostname & protocol for your site
 
 #sidebar
 # default-image: webjeda-logo-big.jpg # If there is no featured image in a post then this image will be showed. Also on all pages this image will be showed. Use a 500x250 image.
@@ -23,7 +23,7 @@ built-by: Laura Rocha Prado
 
 copyright:
    name: BioDivInfo
-   link: 'http://biodivinfo.github.com'
+   link: 'http://biodivinfo.github.io'
 
 # Build settings
 markdown: kramdown
