--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://biodivinfo.github.io" # the base hostname & protocol for your site
 
 #sidebar
-# default-image: webjeda-logo-big.jpg # If there is no featured image in a post then this image will be showed. Also on all pages this image will be showed. Use a 500x250 image.
+default-image: webjeda-logo-big.jpg # If there is no featured image in a post then this image will be showed. Also on all pages this image will be showed. Use a 500x250 image.
 
 #footer
 
@@ -32,10 +32,10 @@ paginate: 6
 paginate_path: /page:num/
 
 # Tracker
-analytics: UA-83979019-1
+# analytics: UA-83979019-1
 
 # Comments
-# disqus: yes
+disqus: no
 # disqus-shortname: webjeda-demo
 
 #social
@@ -46,7 +46,7 @@ analytics: UA-83979019-1
 # email: hello@webjeda.com
 
 #facebook like box
-# fb-like-box: yes
+fb-like-box: no
 # fb-app-id: 549480635219583
 # fb-page-url: https://www.facebook.com/webjeda/
 # fb-page-title: webjeda
