corrige link do rodapé

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ built-by: Laura Rocha Prado
 
 copyright:
    name: BioDivInfo
-   link: 'https://biodivinfo.github.io'
+   link: 'https://github.com/BioDivInfo/'
 
 # Build settings
 markdown: kramdown
